Got the sort Filters Working

--- a/Resources/HTML/Shop.html
+++ b/Resources/HTML/Shop.html
@@ -71,17 +71,17 @@
                     </div>
                     <div class="Medium_sm_filter_container">
                         <h2>Medium</h2><br>
-                        <input type="checkbox" class="Art_Medium" id="Coffee_Prints"><label for="Coffee_Prints">Coffee Prints</label><br>
-                        <input type="checkbox" class="Art_Medium" id="Acrylic_Prints"><label for="Acrylic_Prints">Acrylic Prints</label><br>
-                        <input type="checkbox" class="Art_Medium" id="Water_Colour_Prints"><label for="Water_Colour_Prints">Water Colour Prints</label><br>
-                        <input type="checkbox" class="Art_Medium" id="Oil_Prints"><label for="Oil_Prints">Oil Prints</label><br>
+                        <input type="checkbox" class="Art_Medium filter" data-medium="Coffee" id="Coffee_Prints"><label for="Coffee_Prints">Coffee Prints</label><br>
+                        <input type="checkbox" class="Art_Medium filter" data-medium="Acrylic" id="Acrylic_Prints"><label for="Acrylic_Prints">Acrylic Prints</label><br>
+                        <input type="checkbox" class="Art_Medium filter" data-medium="Water Colour" id="Water_Colour_Prints"><label for="Water_Colour_Prints">Water Colour Prints</label><br>
+                        <input type="checkbox" class="Art_Medium filter" data-medium="Oil" id="Oil_Prints"><label for="Oil_Prints">Oil Prints</label><br>
                     </div>
                     <div class="Size_sm_filter_container">
                         <h2>Size</h2><br>
-                        <input type="checkbox" class="Art_Size" id="A5_Prints"><label for="A5_Prints">A5 Prints</label><br>
-                        <input type="checkbox" class="Art_Size" id="A4_Prints"><label for="A4_Prints">A4 Prints</label><br>
-                        <input type="checkbox" class="Art_Size" id="A3_Prints"><label for="A3_Prints">A3 Prints</label><br>
-                        <input type="checkbox" class="Art_Size" id="Commission_Prints"><label for="Commission_Prints">Commission Prints</label><br>
+                        <input type="checkbox" class="Art_Size filter" data-size="A5" id="A5_Prints"><label for="A5_Prints">A5 Prints</label><br>
+                        <input type="checkbox" class="Art_Size filter" data-size="A4" id="A4_Prints"><label for="A4_Prints">A4 Prints</label><br>
+                        <input type="checkbox" class="Art_Size filter" data-size="A3" id="A3_Prints"><label for="A3_Prints">A3 Prints</label><br>
+                        <input type="checkbox" class="Art_Size filter" data-size="Commission" id="Commission_Prints"><label for="Commission_Prints">Commission Prints</label><br>
                     </div>
                 </div>
                 <div class="shop_sm_container Products_Container">
