Set up a Login and Dashboard for Aisling , in process of setting up ability for her to add images directly through firebase

--- a/Resources/HTML/Commissions.html
+++ b/Resources/HTML/Commissions.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../../Resources/CSS/basics.css">
     <link rel="stylesheet" href="../../Resources/CSS/header.css">
-    <link rel="stylesheet" href="../../Resources/CSS/Commissions.css">
+    <link rel="stylesheet" href="../../Resources/CSS/commissions.css">
     <link rel="stylesheet" href="../../Resources/CSS/footer.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
     <script src="../../Resources/JS/navbar.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="../../Resources/JS/shop.js"></script>
-    <!-- <script src="../../Resources/JS/homepage.js"></script> -->
     <title>ArtByANC | Commissions</title>
 </head>
+
 <body>
     <div class="wrapper">
         <div class="overall_container">
             <div class="smaller_container">
                 <div class="logo">
-                    <a href="../../Resources/HTML/Homepage.html"><img src="../../Resources/Images/General_Images/Logo_Black.jpg" alt=""></a>
+                    <a href="../../Resources/HTML/Homepage.html">
+                        <img src="../../Resources/Images/General_Images/Logo_Black.jpg" alt="">
+                    </a>
                 </div>
                 <div class="nav">
                     <ul>
@@ -31,8 +33,10 @@
                 </div>
             </div>
             <div class="smaller_container">
-                <div class="hamburger_container" >
-                    <a href="../../Resources/HTML/Homepage.html"><h1>ANC</h1></a>
+                <div class="hamburger_container">
+                    <a href="../../Resources/HTML/Homepage.html">
+                        <h1>ANC</h1>
+                    </a>
                     <div class="burger_menu" onclick="myFunction(this)">
                         <div class="bar1"></div>
                         <div class="bar2"></div>
@@ -42,11 +46,39 @@
                 <img src="../../Resources/Images/General_Images/BG_WebTemp.jpg" alt="">
             </div>
         </div>
-        
+        <div class="Commission_Container">
+            <div class="Commission_Container_sm">
+                <h1>Commissioned Work</h1>
+                <div class="Commissioned_Work_Pieces">
 
+                </div>
+            </div>
+            <div class="Commission_Container_sm">
+                <div class="Commission_Container_smaller">
+                    <h3>Want your Own Commissioned Work ?</h3>
+                </div>
+                <div class="Commission_Container_smaller">
+                    <a href="../../Resources/HTML/Contact.html">
+                        <h3>Get in Contact</h3>
+                        <h3>↳</h3>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="Colour_Of_Month_Container">
+            <div class="colour_sm_container">
+                <h1>COLOUR OF THE MONTH ORIGINALS</h1>
+                <div class="circle"></div>
+            </div>
+            <div class="colour_sm_container">
+                <div class="elfsight-app-564f59ce-44ef-4c97-9570-da490157d24b"></div>
+            </div>
+        </div>
     </div>
     <div class="footer">
         <h4>ArtByANC &copy; Copyright 2020</h4>
     </div>
+    <script src="../../Resources/JS/shop.js"></script>
 </body>
+
 </html>
