Set up Aisling's Back End UI to add products and Dashboard , got the products working ,running offfirebase now for shop page but having trouble with commissioned products now

--- a/Resources/HTML/AdminDashboard.html
+++ b/Resources/HTML/AdminDashboard.html
@@ -28,12 +28,12 @@
         <h1 class="admin_title">Admin Dashboard</h1>
         <div class="buttons_container">
             <div class="button_container_sm">
-            <a href="../../Resources/HTML/AdminAction.html?action=add"><div class="button_container_smallest button_add">Add Product</div></a>
-            <a href="../../Resources/HTML/AdminAction.html?action=view"><div class="button_container_smallest button_view">View Products</div></a>
+                <a href="../../Resources/HTML/AdminAction.html?action=Add"><div class="button_container_smallest button_add">Add Product</div></a>
+                <a href="../../Resources/HTML/AdminAction.html?action=View"><div class="button_container_smallest button_view">View Products</div></a>
             </div>
             <div class="button_container_sm">
-            <a href="../../Resources/HTML/AdminAction.html?action=update"><div class="button_container_smallest button_update">Update Products</div></a>
-            <a href="../../Resources/HTML/AdminAction.html?action=delete"><div class="button_container_smallest button_delete">Delete Product</div></a>
+                <a href="../../Resources/HTML/AdminAction.html?action=Update"><div class="button_container_smallest button_update">Update Products</div></a>
+                <a href="../../Resources/HTML/AdminAction.html?action=Delete"><div class="button_container_smallest button_delete">Delete Product</div></a>
             </div>
         </div>
     </div>
