--- a/Resources/HTML/AdminAction.html
+++ b/Resources/HTML/AdminAction.html
@@ -24,9 +24,9 @@
             </div>
         </div>
         <div class="display_container">
-
+            <div class="products_container"></div>
         </div>
-        <h1 class="admin_title"></h1>
+        
     </div>
     <script>
         $(document).ready(function(){
@@ -36,6 +36,8 @@
             })
         })
     </script>
-    <script src="../../Reosurces/JS/adminAction.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-storage.js"></script>
+    <script src="../../Resources/JS/adminAction.js"></script>
 </body>
 </html>
