--- a/Resources/HTML/Commissions.html
+++ b/Resources/HTML/Commissions.html
@@ -78,6 +78,8 @@
     <div class="footer">
         <h4>ArtByANC &copy; Copyright 2020</h4>
     </div>
+    <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-storage.js"></script>
     <script src="../../Resources/JS/shop.js"></script>
 </body>
 
