--- a/Resources/HTML/Shop.html
+++ b/Resources/HTML/Shop.html
@@ -102,7 +102,9 @@
     <div class="footer">
         <h4>ArtByANC &copy; Copyright 2020</h4>
     </div>
-    <!-- <script src="../../Resources/Libraries/ColourSorter.js"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script> -->
+    <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-storage.js"></script>
     <script src="../../Resources/JS/shop.js"></script>
 </body>
 </html>
